show best and recommended player count